syntax = "proto3";

option java_package = "ru.alexmaryin.spacextimes_rx";
option java_multiple_files = true;

message ProtoSettings {
  bool translate_to_ru = 1;
  bool armed_synchronize = 2;
  map<string, int64> last_sync = 3;
}
